# stereo_reconstruction

./: .gitignore  CMakeLists.txt  README.md
data/MiddEval3/trainingH/ArtL/: disp1GT.pfm
data/MiddEval3/trainingH/Teddy/: disp1GT.pfm
perceptual_window_search/: Perceptual_window_search.ipynb
results/HitNet/testH/Computer/: im0_reference.pfm
results/HitNet/trainingH/ArtL/: im0_reference.pfm
results/HitNet/trainingH/Teddy/: im0_reference.pfm
src/: BundleAdjustment.h  CMakeLists.txt  SimpleMesh.h  data.cpp  data.h  data_loader.cpp  data_loader.h  directory.cpp  directory.h  eight_point.cpp  eight_point.h  evalDisp.h  keypoints.cpp  main.cpp  reconstruction.cpp  reconstruction.h  rectification_main.cpp  test_bundle_adjustment.cpp  test_loading.cpp  test_reconstruction.cpp  utils.cpp  utils.h
src/DataLoader/: data.cpp  data.h  data_loader.cpp  data_loader.h  directory.cpp  directory.h
src/PoseEstimation/: bundle_adjustment.h  eight_point.cpp  eight_point.h  keypoints.cpp  keypoints.h  pose_estimation.cpp  pose_estimation.h
src/Reconstruction/: reconstruction.cpp  reconstruction.h  simple_mesh.h
src/Rectification/: rectification.cpp  rectification.hpp  z_optimization.hpp
src/Tests/: test_bundle_adjustment.cpp  test_keypoints.cpp  test_loading.cpp  test_reconstruction.cpp
src/WindowSearch/: BlockSearch.cpp  BlockSearch.h  LinearSearch.cpp  LinearSearch.h
src/rectification/: rectification.cpp  rectification.hpp
src/stero_matching/: BlockSearch.cpp  BlockSearch.h  LinearSearch.cpp  LinearSearch.h
